@@ -1,21 +1,11 @@
 package com.example.rule.dynamodb;
 
-import com.example.rule.dynamodb.config.ScanDynamodbTableIdleRuleConfig;
-import com.example.services.cloudwatch.CloudWatchConnector;
-import com.example.services.cloudwatch.CloudWatchUtil;
-import com.example.services.dynamodb.DynamoDbConnector;
-import com.google.common.collect.ImmutableList;
-import org.junit.jupiter.api.AfterAll;
-import org.junit.jupiter.api.AfterEach;
-import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.Test;
-import org.mockito.MockedStatic;
-import org.mockito.Mockito;
-import software.amazon.awssdk.services.dynamodb.model.ListTablesResponse;
-
-import java.util.List;
-import java.util.Optional;
-
+import static com.example.TestUtil.TABLE_1;
+import static com.example.TestUtil.TABLE_2;
+import static com.example.TestUtil.TABLE_3;
+import static com.example.TestUtil.TABLE_4;
+import static com.example.TestUtil.TABLE_WITH_DATA;
+import static com.example.TestUtil.TABLE_WITH_DATA_OTHER;
 import static com.example.TestUtil.createDummyListTableResponse;
 import static com.example.TestUtil.createImmutableListOfScanOutcome;
 import static com.example.TestUtil.createOptionalDescribeTableResponse;
@@ -28,7 +18,22 @@ import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.reset;
 import static org.mockito.Mockito.when;
 
-public class ScanDynamodbTableIdleRuleImplTest {
+import com.example.rule.dynamodb.config.ScanDynamodbTableIdleRuleConfig;
+import com.example.services.cloudwatch.CloudWatchConnector;
+import com.example.services.cloudwatch.CloudWatchUtil;
+import com.example.services.dynamodb.DynamoDbConnector;
+import com.google.common.collect.ImmutableList;
+import java.util.List;
+import java.util.Optional;
+import org.junit.jupiter.api.AfterAll;
+import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import org.mockito.MockedStatic;
+import org.mockito.Mockito;
+import software.amazon.awssdk.services.dynamodb.model.ListTablesResponse;
+
+class ScanDynamodbTableIdleRuleImplTest {
 
     static MockedStatic<CloudWatchUtil> mockedCloudWatchUtil = Mockito.mockStatic(CloudWatchUtil.class);
     static MockedStatic<CloudWatchConnector> mockedCloudWatchConnector = Mockito.mockStatic(CloudWatchConnector.class);
@@ -36,6 +41,8 @@ public class ScanDynamodbTableIdleRuleImplTest {
     static MockedStatic<DynamoDbConnector> mockedDynamoDbConnector = Mockito.mockStatic(DynamoDbConnector.class);
     static DynamoDbConnector mockedDynamoDbConnectorInstance = Mockito.mock(DynamoDbConnector.class);
     static ScanDynamodbTableIdleRuleImpl testObject;
+
+    private static final int VALID_MAX_IDLE_PERIOD_IN_DAYS = 5;
 
     @BeforeEach
     public void beforeEach() {
@@ -62,22 +69,30 @@ public class ScanDynamodbTableIdleRuleImplTest {
     @Test
     void testThatScanDynamodbTableIdleRuleImplExecutesSuccessfully() {
         // Given
-        var config = ScanDynamodbTableIdleRuleConfig.builder().maxIdlePeriodInDays(5).excludeEmptyTables(true).build();
-        var timeWindow = 1;
-        var listOfListTableResponses = List.of(
-                createDummyListTableResponse("table1", "table2"),
-                createDummyListTableResponse("table3", "table4"));
-        var optTable = createOptionalDescribeTableResponse(123L);
-        var expectedOutcome = createImmutableListOfScanOutcome("table1", "table2", "table3", "table4");
+        final var config = ScanDynamodbTableIdleRuleConfig.builder()
+                .maxIdlePeriodInDays(VALID_MAX_IDLE_PERIOD_IN_DAYS)
+                .excludeEmptyTables(true)
+                .build();
+        final var timeWindow = 1;
+        final var listOfListTableResponses =
+                List.of(createDummyListTableResponse(TABLE_1, TABLE_2), createDummyListTableResponse(TABLE_3, TABLE_4));
+        final var optTable = createOptionalDescribeTableResponse(123L);
+        final var expectedOutcome = createImmutableListOfScanOutcome(TABLE_1, TABLE_2, TABLE_3, TABLE_4);
 
         // When
-        mockedCloudWatchUtil.when(() -> CloudWatchUtil.getAppropriateTimeWindowForPeriod(anyInt())).thenReturn(timeWindow);
+        mockedCloudWatchUtil
+                .when(() -> CloudWatchUtil.getAppropriateTimeWindowForPeriod(anyInt()))
+                .thenReturn(timeWindow);
         when(mockedDynamoDbConnectorInstance.listTables()).thenReturn(listOfListTableResponses);
         when(mockedDynamoDbConnectorInstance.getTable(any())).thenReturn(optTable);
-        when(mockedCloudWatchConnectorInstance.getTotalConsumedReadCapacityOfADynamoDbTable(any(), any(), any(), anyInt())).thenReturn(0d);
-        when(mockedCloudWatchConnectorInstance.getTotalConsumedWriteCapacityOfADynamoDbTable(any(), any(), any(), anyInt())).thenReturn(0d);
+        when(mockedCloudWatchConnectorInstance.getTotalConsumedReadCapacityOfADynamoDbTable(
+                        any(), any(), any(), anyInt()))
+                .thenReturn(0d);
+        when(mockedCloudWatchConnectorInstance.getTotalConsumedWriteCapacityOfADynamoDbTable(
+                        any(), any(), any(), anyInt()))
+                .thenReturn(0d);
 
-        var actualOutcome = testObject.execute(config);
+        final var actualOutcome = testObject.execute(config);
 
         // Then
         assertThat(actualOutcome)
@@ -86,11 +101,14 @@ public class ScanDynamodbTableIdleRuleImplTest {
                 .isEqualTo(expectedOutcome);
     }
 
-
     @Test
     void testThatScanDynamodbTableIdleRuleImplThrowsIllegalArgumentExceptionWhenLessThanADayProvidedAsAPeriod() {
         // Given
-        var config = ScanDynamodbTableIdleRuleConfig.builder().maxIdlePeriodInDays(-5).excludeEmptyTables(true).build();
+        final var invalidMaxIdlePeriodInDays = -5;
+        final var config = ScanDynamodbTableIdleRuleConfig.builder()
+                .maxIdlePeriodInDays(invalidMaxIdlePeriodInDays)
+                .excludeEmptyTables(true)
+                .build();
 
         // When & Then
         assertThatThrownBy(() -> testObject.execute(config)).isInstanceOf(IllegalArgumentException.class);
@@ -99,16 +117,22 @@ public class ScanDynamodbTableIdleRuleImplTest {
     @Test
     void testThatScanDynamodbTableIdleRuleImplReturnsEmptyListWhenNoTablesArePresent() {
         // Given
-        var config = ScanDynamodbTableIdleRuleConfig.builder().maxIdlePeriodInDays(5).excludeEmptyTables(true).build();
-        var timeWindow = 1;
-        var listOfListTableResponses = List.of(ListTablesResponse.builder().build());
-        var expectedOutcome = ImmutableList.of();
+        final var config = ScanDynamodbTableIdleRuleConfig.builder()
+                .maxIdlePeriodInDays(VALID_MAX_IDLE_PERIOD_IN_DAYS)
+                .excludeEmptyTables(true)
+                .build();
+        final var timeWindow = 1;
+        final var listOfListTableResponses =
+                List.of(ListTablesResponse.builder().build());
+        final var expectedOutcome = ImmutableList.of();
 
         // When
-        mockedCloudWatchUtil.when(() -> CloudWatchUtil.getAppropriateTimeWindowForPeriod(anyInt())).thenReturn(timeWindow);
+        mockedCloudWatchUtil
+                .when(() -> CloudWatchUtil.getAppropriateTimeWindowForPeriod(anyInt()))
+                .thenReturn(timeWindow);
         when(mockedDynamoDbConnectorInstance.listTables()).thenReturn(listOfListTableResponses);
 
-        var actualOutcome = testObject.execute(config);
+        final var actualOutcome = testObject.execute(config);
 
         // Then
         assertThat(actualOutcome)
@@ -120,24 +144,41 @@ public class ScanDynamodbTableIdleRuleImplTest {
     @Test
     void testThatScanDynamodbTableIdleRuleImplReturnsOnlyTheTablesThatHasZeroConsumedReadAndWriteCapacity() {
         // Given
-        var config = ScanDynamodbTableIdleRuleConfig.builder().maxIdlePeriodInDays(5).excludeEmptyTables(true).build();
-        var timeWindow = 1;
-        var listOfListTableResponses = List.of(
-                createDummyListTableResponse("table1", "tableWithReadCon"),
-                createDummyListTableResponse("tableWithWriteCon", "table4", "tableWithBothCon"));
-        var optTable = createOptionalDescribeTableResponse(123L);
-        var expectedOutcome = createImmutableListOfScanOutcome("table1", "table4");
+        final var config = ScanDynamodbTableIdleRuleConfig.builder()
+                .maxIdlePeriodInDays(VALID_MAX_IDLE_PERIOD_IN_DAYS)
+                .excludeEmptyTables(true)
+                .build();
+        final var timeWindow = 1;
+        final var tableNameWithReadCon = "tableWithReadCon";
+        final var tableNameWithWriteCon = "tableWithWriteCon";
+        final var tableNameWithBothCon = "tableWithBothCon";
+        final var dataSize = 123d;
+        final var listOfListTableResponses = List.of(
+                createDummyListTableResponse(TABLE_1, tableNameWithReadCon),
+                createDummyListTableResponse(tableNameWithWriteCon, TABLE_4, tableNameWithBothCon));
+        final var optTable = createOptionalDescribeTableResponse(123L);
+        final var expectedOutcome = createImmutableListOfScanOutcome(TABLE_1, TABLE_4);
 
         // When
-        mockedCloudWatchUtil.when(() -> CloudWatchUtil.getAppropriateTimeWindowForPeriod(anyInt())).thenReturn(timeWindow);
+        mockedCloudWatchUtil
+                .when(() -> CloudWatchUtil.getAppropriateTimeWindowForPeriod(anyInt()))
+                .thenReturn(timeWindow);
         when(mockedDynamoDbConnectorInstance.listTables()).thenReturn(listOfListTableResponses);
         when(mockedDynamoDbConnectorInstance.getTable(any())).thenReturn(optTable);
-        when(mockedCloudWatchConnectorInstance.getTotalConsumedReadCapacityOfADynamoDbTable(or(eq("table1"), eq("table4")), any(), any(), anyInt())).thenReturn(0d);
-        when(mockedCloudWatchConnectorInstance.getTotalConsumedReadCapacityOfADynamoDbTable(or(eq("tableWithReadCon"), eq("tableWithBothCon")), any(), any(), anyInt())).thenReturn(123d);
-        when(mockedCloudWatchConnectorInstance.getTotalConsumedWriteCapacityOfADynamoDbTable(or(eq("table1"), eq("table4")), any(), any(), anyInt())).thenReturn(0d);
-        when(mockedCloudWatchConnectorInstance.getTotalConsumedWriteCapacityOfADynamoDbTable(or(eq("tableWithWriteCon"), eq("tableWithBothCon")), any(), any(), anyInt())).thenReturn(123d);
+        when(mockedCloudWatchConnectorInstance.getTotalConsumedReadCapacityOfADynamoDbTable(
+                        or(eq(TABLE_1), eq(TABLE_4)), any(), any(), anyInt()))
+                .thenReturn(0d);
+        when(mockedCloudWatchConnectorInstance.getTotalConsumedReadCapacityOfADynamoDbTable(
+                        or(eq(tableNameWithReadCon), eq(tableNameWithBothCon)), any(), any(), anyInt()))
+                .thenReturn(dataSize);
+        when(mockedCloudWatchConnectorInstance.getTotalConsumedWriteCapacityOfADynamoDbTable(
+                        or(eq(TABLE_1), eq(TABLE_4)), any(), any(), anyInt()))
+                .thenReturn(0d);
+        when(mockedCloudWatchConnectorInstance.getTotalConsumedWriteCapacityOfADynamoDbTable(
+                        or(eq(tableNameWithWriteCon), eq(tableNameWithBothCon)), any(), any(), anyInt()))
+                .thenReturn(dataSize);
 
-        var actualOutcome = testObject.execute(config);
+        final var actualOutcome = testObject.execute(config);
 
         // Then
         assertThat(actualOutcome)
@@ -149,24 +190,35 @@ public class ScanDynamodbTableIdleRuleImplTest {
     @Test
     void testThatScanDynamodbTableIdleRuleImplReturnsOnlyTheTablesThatHasDataInIt() {
         // Given
-        var config = ScanDynamodbTableIdleRuleConfig.builder().maxIdlePeriodInDays(5).excludeEmptyTables(true).build();
-        var timeWindow = 1;
-        var listOfListTableResponses = List.of(
-                createDummyListTableResponse("table1", "tableWithData"),
-                createDummyListTableResponse("tableWithDataOther", "table4"));
-        var optTableWithData = createOptionalDescribeTableResponse(123L);
-        var optTableWithNoData = createOptionalDescribeTableResponse(0L);
-        var expectedOutcome = createImmutableListOfScanOutcome("tableWithData", "tableWithDataOther");
+        final var config = ScanDynamodbTableIdleRuleConfig.builder()
+                .maxIdlePeriodInDays(VALID_MAX_IDLE_PERIOD_IN_DAYS)
+                .excludeEmptyTables(true)
+                .build();
+        final var timeWindow = 1;
+        final var listOfListTableResponses = List.of(
+                createDummyListTableResponse(TABLE_1, TABLE_WITH_DATA),
+                createDummyListTableResponse(TABLE_WITH_DATA_OTHER, TABLE_4));
+        final var optTableWithData = createOptionalDescribeTableResponse(123L);
+        final var optTableWithNoData = createOptionalDescribeTableResponse(0L);
+        final var expectedOutcome = createImmutableListOfScanOutcome(TABLE_WITH_DATA, TABLE_WITH_DATA_OTHER);
 
         // When
-        mockedCloudWatchUtil.when(() -> CloudWatchUtil.getAppropriateTimeWindowForPeriod(anyInt())).thenReturn(timeWindow);
+        mockedCloudWatchUtil
+                .when(() -> CloudWatchUtil.getAppropriateTimeWindowForPeriod(anyInt()))
+                .thenReturn(timeWindow);
         when(mockedDynamoDbConnectorInstance.listTables()).thenReturn(listOfListTableResponses);
-        when(mockedCloudWatchConnectorInstance.getTotalConsumedReadCapacityOfADynamoDbTable(any(), any(), any(), anyInt())).thenReturn(0d);
-        when(mockedCloudWatchConnectorInstance.getTotalConsumedWriteCapacityOfADynamoDbTable(any(), any(), any(), anyInt())).thenReturn(0d);
-        when(mockedDynamoDbConnectorInstance.getTable(or(eq("tableWithData"), eq("tableWithDataOther")))).thenReturn(optTableWithData);
-        when(mockedDynamoDbConnectorInstance.getTable(or(eq("table1"), eq("table4")))).thenReturn(optTableWithNoData);
+        when(mockedCloudWatchConnectorInstance.getTotalConsumedReadCapacityOfADynamoDbTable(
+                        any(), any(), any(), anyInt()))
+                .thenReturn(0d);
+        when(mockedCloudWatchConnectorInstance.getTotalConsumedWriteCapacityOfADynamoDbTable(
+                        any(), any(), any(), anyInt()))
+                .thenReturn(0d);
+        when(mockedDynamoDbConnectorInstance.getTable(or(eq(TABLE_WITH_DATA), eq(TABLE_WITH_DATA_OTHER))))
+                .thenReturn(optTableWithData);
+        when(mockedDynamoDbConnectorInstance.getTable(or(eq(TABLE_1), eq(TABLE_4))))
+                .thenReturn(optTableWithNoData);
 
-        var actualOutcome = testObject.execute(config);
+        final var actualOutcome = testObject.execute(config);
 
         // Then
         assertThat(actualOutcome)
@@ -178,24 +230,36 @@ public class ScanDynamodbTableIdleRuleImplTest {
     @Test
     void testThatScanDynamodbTableIdleRuleImplReturnsAllTheIdleTablesRegardlessTheirSize() {
         // Given
-        var config = ScanDynamodbTableIdleRuleConfig.builder().maxIdlePeriodInDays(5).excludeEmptyTables(false).build();
-        var timeWindow = 1;
-        var listOfListTableResponses = List.of(
-                createDummyListTableResponse("table1", "tableWithData"),
-                createDummyListTableResponse("tableWithDataOther", "table4"));
-        var optTableWithData = createOptionalDescribeTableResponse(123L);
-        var optTableWithNoData = createOptionalDescribeTableResponse(0L);
-        var expectedOutcome = createImmutableListOfScanOutcome("table1", "table4", "tableWithData", "tableWithDataOther");
+        final var config = ScanDynamodbTableIdleRuleConfig.builder()
+                .maxIdlePeriodInDays(VALID_MAX_IDLE_PERIOD_IN_DAYS)
+                .excludeEmptyTables(false)
+                .build();
+        final var timeWindow = 1;
+        final var listOfListTableResponses = List.of(
+                createDummyListTableResponse(TABLE_1, TABLE_WITH_DATA),
+                createDummyListTableResponse(TABLE_WITH_DATA_OTHER, TABLE_4));
+        final var optTableWithData = createOptionalDescribeTableResponse(123L);
+        final var optTableWithNoData = createOptionalDescribeTableResponse(0L);
+        final var expectedOutcome =
+                createImmutableListOfScanOutcome(TABLE_1, TABLE_4, TABLE_WITH_DATA, TABLE_WITH_DATA_OTHER);
 
         // When
-        mockedCloudWatchUtil.when(() -> CloudWatchUtil.getAppropriateTimeWindowForPeriod(anyInt())).thenReturn(timeWindow);
+        mockedCloudWatchUtil
+                .when(() -> CloudWatchUtil.getAppropriateTimeWindowForPeriod(anyInt()))
+                .thenReturn(timeWindow);
         when(mockedDynamoDbConnectorInstance.listTables()).thenReturn(listOfListTableResponses);
-        when(mockedCloudWatchConnectorInstance.getTotalConsumedReadCapacityOfADynamoDbTable(any(), any(), any(), anyInt())).thenReturn(0d);
-        when(mockedCloudWatchConnectorInstance.getTotalConsumedWriteCapacityOfADynamoDbTable(any(), any(), any(), anyInt())).thenReturn(0d);
-        when(mockedDynamoDbConnectorInstance.getTable(or(eq("tableWithData"), eq("tableWithDataOther")))).thenReturn(optTableWithData);
-        when(mockedDynamoDbConnectorInstance.getTable(or(eq("table1"), eq("table4")))).thenReturn(optTableWithNoData);
+        when(mockedCloudWatchConnectorInstance.getTotalConsumedReadCapacityOfADynamoDbTable(
+                        any(), any(), any(), anyInt()))
+                .thenReturn(0d);
+        when(mockedCloudWatchConnectorInstance.getTotalConsumedWriteCapacityOfADynamoDbTable(
+                        any(), any(), any(), anyInt()))
+                .thenReturn(0d);
+        when(mockedDynamoDbConnectorInstance.getTable(or(eq(TABLE_WITH_DATA), eq(TABLE_WITH_DATA_OTHER))))
+                .thenReturn(optTableWithData);
+        when(mockedDynamoDbConnectorInstance.getTable(or(eq(TABLE_1), eq(TABLE_4))))
+                .thenReturn(optTableWithNoData);
 
-        var actualOutcome = testObject.execute(config);
+        final var actualOutcome = testObject.execute(config);
 
         // Then
         assertThat(actualOutcome)
@@ -207,23 +271,36 @@ public class ScanDynamodbTableIdleRuleImplTest {
     @Test
     void testThatScanDynamodbTableIdleRuleWorksOnOnlyTheTablesThatExists() {
         // Given
-        var config = ScanDynamodbTableIdleRuleConfig.builder().maxIdlePeriodInDays(5).excludeEmptyTables(false).build();
-        var timeWindow = 1;
-        var listOfListTableResponses = List.of(
-                createDummyListTableResponse("table1", "tableThatDoesntExist"),
-                createDummyListTableResponse("otherTableThatDoesntExists", "table4"));
-        var optTable = createOptionalDescribeTableResponse(0L);
-        var expectedOutcome = createImmutableListOfScanOutcome("table1", "table4");
+        final var config = ScanDynamodbTableIdleRuleConfig.builder()
+                .maxIdlePeriodInDays(VALID_MAX_IDLE_PERIOD_IN_DAYS)
+                .excludeEmptyTables(false)
+                .build();
+        final var timeWindow = 1;
+        final var tableNameThatDoesntExist = "tableThatDoesntExist";
+        final var otherTableNameThatDoesntExists = "otherTableThatDoesntExists";
+        final var listOfListTableResponses = List.of(
+                createDummyListTableResponse(TABLE_1, tableNameThatDoesntExist),
+                createDummyListTableResponse(otherTableNameThatDoesntExists, TABLE_4));
+        final var optTable = createOptionalDescribeTableResponse(0L);
+        final var expectedOutcome = createImmutableListOfScanOutcome(TABLE_1, TABLE_4);
 
         // When
-        mockedCloudWatchUtil.when(() -> CloudWatchUtil.getAppropriateTimeWindowForPeriod(anyInt())).thenReturn(timeWindow);
+        mockedCloudWatchUtil
+                .when(() -> CloudWatchUtil.getAppropriateTimeWindowForPeriod(anyInt()))
+                .thenReturn(timeWindow);
         when(mockedDynamoDbConnectorInstance.listTables()).thenReturn(listOfListTableResponses);
-        when(mockedCloudWatchConnectorInstance.getTotalConsumedReadCapacityOfADynamoDbTable(any(), any(), any(), anyInt())).thenReturn(0d);
-        when(mockedCloudWatchConnectorInstance.getTotalConsumedWriteCapacityOfADynamoDbTable(any(), any(), any(), anyInt())).thenReturn(0d);
-        when(mockedDynamoDbConnectorInstance.getTable(or(eq("tableWithData"), eq("tableWithDataOther")))).thenReturn(Optional.empty());
-        when(mockedDynamoDbConnectorInstance.getTable(or(eq("table1"), eq("table4")))).thenReturn(optTable);
+        when(mockedCloudWatchConnectorInstance.getTotalConsumedReadCapacityOfADynamoDbTable(
+                        any(), any(), any(), anyInt()))
+                .thenReturn(0d);
+        when(mockedCloudWatchConnectorInstance.getTotalConsumedWriteCapacityOfADynamoDbTable(
+                        any(), any(), any(), anyInt()))
+                .thenReturn(0d);
+        when(mockedDynamoDbConnectorInstance.getTable(or(eq(TABLE_WITH_DATA), eq(TABLE_WITH_DATA_OTHER))))
+                .thenReturn(Optional.empty());
+        when(mockedDynamoDbConnectorInstance.getTable(or(eq(TABLE_1), eq(TABLE_4))))
+                .thenReturn(optTable);
 
-        var actualOutcome = testObject.execute(config);
+        final var actualOutcome = testObject.execute(config);
 
         // Then
         assertThat(actualOutcome)
@@ -231,5 +308,4 @@ public class ScanDynamodbTableIdleRuleImplTest {
                 .ignoringCollectionOrder()
                 .isEqualTo(expectedOutcome);
     }
-
 }
